# SAR_SR_PROJECT

./: .gitignore  CLAUDE.md  README.md  capella_downloaded.txt  capella_manifest.json  download_capella.py  pyproject.toml  requirements.txt
checkpoints/phase1/: srcnn_best.pth
models/: rcan.py  srcnn.py
notebooks/: explore.ipynb
results/: metrics_table.csv
scripts/: dataset.py  evaluate.py  losses.py  pack_patches.py  preprocess.py  train.py  visualize.py
